[project]
name = "asd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "selenium>=4.31.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
